Adding updated icons & resume link

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/brianjking" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+								<li><a href="https://github.com/brianjking/resume-cv/raw/master/Brian-J-King-Resume.pdf"class="icon fa-file-pdf-o"><span class="label">Resume</span></a></li>
+								<li><a href="https://facebook.com/brianjosephking" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/brianjking" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/brianjking" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:brianjosephking@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
