--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Brian J King</h1>
+						<h1>Brian J. King</h1>
 						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
