--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 							<ul>
 								<li><a href="https://www.linkedin.com/in/brianjking" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/brianjking/resume-cv/raw/master/Brian-J-King-Resume.pdf"class="icon fa-file-pdf-o"><span class="label">Resume</span></a></li>
-								<li><a href="https://github.com/brianjking" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:brianjosephking@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/brianjking" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://bitbucket.org/brianjking" class="icon fa-bitbucket"><span class="label">BitBucket</span></a></li>
+								<li><a href="http://stackoverflow.com/users/3750804/brian-king" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
+								<li><a href="https://news.ycombinator.com/user?id=brianjking" class="icon fa-hacker-news"><span class="label">Stackoverflow</span></a></li>
 								<li><a href="https://twitter.com/brianjking" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://facebook.com/brianjosephking" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							</ul>
