--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<li><a href="http://stackoverflow.com/users/3750804/brian-king" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
 								<li><a href="https://news.ycombinator.com/user?id=brianjking" class="icon fa-hacker-news"><span class="label">Stackoverflow</span></a></li>
 								<li><a href="https://twitter.com/brianjking" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.flickr.com/photos/brianjking312/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 								<li><a href="https://facebook.com/brianjosephking" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							</ul>
 						</nav>
